radio button fix

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <tr>
                     <td class = "text">On a scale of 1-5,how did you like our product?</td>
                     <td class = "radio">
-                        <input type = "radio">1
-                        <input type = "radio">2
-                        <input type = "radio">3
-                        <input type = "radio">4
-                        <input type = "radio">5
+                        <input type = "radio" name="rate">1
+                        <input type = "radio" name="rate">2
+                        <input type = "radio" name="rate">3
+                        <input type = "radio" name="rate">4
+                        <input type = "radio" name="rate">5
                     </td>
                 </tr>
                 <tr>
